# gClock

./: LICENSE  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  alarm.c  config.c  gclock.h  main.c  write.c
